--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link type="image/x-icon" href="favicon.ico" rel="shortcut icon" />
     <title>ggcon</title>
     <!-- boostrap 4 cdn-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -12,13 +13,9 @@
     <link rel="stylesheet" href="stylus.css">
   </head>
   <body>
-    <header class="container">
-        <div class="col-sm-12-sm-6">
             <a href="index.html">
                 <div id="app"></div>
                 <!-- built files will be auto injected -->
             </a>
-        </div>
-    </header>
   </body>
 </html>
